--- a/index.html
+++ b/index.html
@@ -342,6 +342,14 @@
             <figure><img src="assets/revo4.0.jpg" alt="" /></figure>
           </aside>
         </section>
+        <hr>
+        <div class="sumber">
+          <h2>Sumber:</h2>
+          <ul>
+            <li><a href="https://osf.io/6hsz7/download">https://osf.io/6hsz7/download</a></li>
+            <li><a href="https://www.leapfactor.io/blog/sejarah-revolusi-industri-10-hingga-40">https://www.leapfactor.io/blog/sejarah-revolusi-industri-10-hingga-40</a></li>
+          </ul>
+        </div>
       </article>
     </main>
     <footer class="index-footer">
