--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>REVOLUSI INDUSTRI</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="shortcut icon" type="x-icon" href="./assets/robot.jpg">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <script
@@ -50,7 +54,49 @@
             pertumbuhan penduduk dan pendapatan rata-rata yang berkelanjutan dan
             belum pernah terjadi sebelumnya.
           </p>
-          <a href="#revolusi1" class="btn1">Selengkapnya</a>
+          <a href="#card-info" class="btn1">Selengkapnya</a>
+        </div>
+      </section>
+      <section id="card-info">
+        
+        <div class="card-content">
+          <h2 class="judul">Daftar Konten</h2>
+          <div class="card-wrapper">
+            <div class="card-area">
+              <div class="card">
+                <img src="./assets/revo1.0.jpg" alt="">
+                <div class="overlay">
+                  <h2>Revolusi 1.0</h2>
+                  <p>Revolusi Industri 1.0 merupakan sebuah revolusi di bidang industri yang pertama kali terjadi tepatnya pada abad ke-18 pada periode tahun 1750 hingga tahun 1850. Revolusi ini ditandai dengan adanya penemuan mesin uap yang digunakan dalam proses produksi sebuah barang.</p>
+                  <a href="#revolusi1">Lebih Detail</a>
+                </div>
+              </div>
+              <div class="card">
+                <img src="./assets/revo2.0.jpeg" alt="">
+                <div class="overlay">
+                  <h2>Revolusi 2.0</h2>
+                  <p>Kemunculan revolusi industri 2.0 terjadi di awal abad ke-20 yang dikenal dengan revolusi teknologi. Revolusi industri yang terjadi ini ditandai dengan adanya penemuan tenaga listrik yang membuat mesin uap yang tadinya sering digunakan dalam proses produksi semakin lama digantikan dengan adanya tenaga listrik tersebut.</p>
+                  <a href="#revolusi2">Lebih Detail</a>
+                </div>
+              </div>
+              <div class="card">
+                <img src="./assets/revo3.0.jpg" alt="">
+                <div class="overlay">
+                  <h2>Revolusi 3.0</h2>
+                  <p>Kemunculan revolusi industri 3.0 yang terjadi pada akhir abad ke-20 ditandai dengan adanya teknologi digital serta internet. Berdasarkan sosiolog Inggris yaitu David Harvey yang mengemukakan cara pandangnya mengenai revolusi industri yang terjadi di masa ini sebagai sebuah proses pemampatan ruang dan waktu yang semakin terkompresi.</p>
+                  <a href="#revolusi3">Lebih Detail</a>
+                </div>
+              </div>
+              <div class="card">
+                <img src="./assets/revo4.0.jpg" alt="">
+                <div class="overlay">
+                  <h2>Revolusi 4.0</h2>
+                  <p>Revolusi industri 4.0 yang terjadi pada awal abad ke-21 merupakan sebuah revolusi dimana manusia telah menemukan pola baru dengan adanya kemajuan teknologi yang terjadi begitu cepat sehingga mengancam berbagai perusahaan yang lebih konvensional.</p>
+                  <a href="#revolusi4">Lebih Detail</a>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
       <article class="main-content">
@@ -264,17 +310,17 @@
               ditandai dengan adanya konektivitas manusia, data, dan mesin dalam
               bentuk virtual atau dikenal dengan istilah cyber physical.
               Perkembangan revolusi industri membawa perubahan yang sangat cepat
-              dengan tujuan mulia menciptakan kualitas kehidupan yang lebih baik.
-              Pada era industri 4.0 ini ada pergeseran trend inovasi ke arah
-              teknologi digital.
+              dengan tujuan mulia menciptakan kualitas kehidupan yang lebih
+              baik. Pada era industri 4.0 ini ada pergeseran trend inovasi ke
+              arah teknologi digital.
             </p>
             <p>
               Di era revolusi industri 4.0 memungkinkan otomatisasi di semua
               bidang untuk mencapai produktivitas yang efektif dan efisien.
               Penerapan sistem informasi rantai pasokan digital ke seluruh unit
-              kerja akan meminimalkan peran manusia sebagai operator. Secara umum
-              di era industri 4.0 ini peran tenaga manusia berubah dari peran
-              operator menjadi seorang ahli dengan kompetensi yang tinggi.
+              kerja akan meminimalkan peran manusia sebagai operator. Secara
+              umum di era industri 4.0 ini peran tenaga manusia berubah dari
+              peran operator menjadi seorang ahli dengan kompetensi yang tinggi.
             </p>
             <p>
               Revolusi industri 4.0 berasal dari sebuah proyek yang diprakarsai
@@ -305,9 +351,9 @@
             </p>
             <p>
               Pada era industri 4.0, manusia akan hidup di dalam ketidakpastian,
-              oleh karena itu kita harus memiliki kemampuan untuk memprediksi masa
-              depan. Kita harus memiliki kemampuan untuk merespon perubahan dengan
-              arif dan bijaksana.
+              oleh karena itu kita harus memiliki kemampuan untuk memprediksi
+              masa depan. Kita harus memiliki kemampuan untuk merespon perubahan
+              dengan arif dan bijaksana.
             </p>
             <p>
               Kehadiran industri 4.0 akan mengancam keberadaan
@@ -331,11 +377,11 @@
               cloud computing, virtualisasi, dll.
             </p>
             <p>
-              Oleh sebab itu, mempersiapkan diri dengan meningkatkan kompetensi di
-              bidang teknologi digital adalah sebuah keniscayaan dan keharusan.
-              Selain itu secara mental kita harus mempersiapkan ketahanan,
-              kemampuan beradaptasi, keterampilan berpikir kritis dan kemampuan
-              berinovasi.
+              Oleh sebab itu, mempersiapkan diri dengan meningkatkan kompetensi
+              di bidang teknologi digital adalah sebuah keniscayaan dan
+              keharusan. Selain itu secara mental kita harus mempersiapkan
+              ketahanan, kemampuan beradaptasi, keterampilan berpikir kritis dan
+              kemampuan berinovasi.
             </p>
           </div>
           <aside>
@@ -348,6 +394,7 @@
           <ul>
             <li><a href="https://osf.io/6hsz7/download">https://osf.io/6hsz7/download</a></li>
             <li><a href="https://www.leapfactor.io/blog/sejarah-revolusi-industri-10-hingga-40">https://www.leapfactor.io/blog/sejarah-revolusi-industri-10-hingga-40</a></li>
+            <li><a href="https://www.gramedia.com/best-seller/perjalanan-revolusi-industri-1-0-hingga-5-0/?srsltid=AfmBOooKnEiRcNgjU9Y9q2Z55Ss_icM6X6PeVRCKwTQP20Y9pVyfHxIE">https://www.gramedia.com/best-seller/perjalanan-revolusi-industri-1-0-hingga-5-0/?srsltid=AfmBOooKnEiRcNgjU9Y9q2Z55Ss_icM6X6PeVRCKwTQP20Y9pVyfHxIE</a></li>
           </ul>
         </div>
       </article>
