--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
 
     <header>
       <div class="logo">
-        <a href="#"
-          ><i class="fa-solid fa-microchip" style="color: #ffffff"></i
-        ></a>
+        <h1>Revolusi Industri</h1>
       </div>
       <nav>
         <ul>
