--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <header>
       <div class="logo">
-        <h1>Revolusi Industri</h1>
+        <h1>Toha Keren</h1>
       </div>
       <nav>
         <ul>
