--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 
     <header>
       <div class="logo">
-        <h1>Revolusi Industri</h1>
+        <h1><a href="#">Revolusi Industri</a></h1>
       </div>
       <nav>
         <ul>
-          <li><a href="#revolusi1">Revolusi 1.0</a></li>
-          <li><a href="#revolusi2">Revolusi 2.0</a></li>
-          <li><a href="#revolusi3">Revolusi 3.0</a></li>
-          <li><a href="#revolusi4">Revolusi 4.0</a></li>
+          <li><a href="revo1.html">Revolusi 1.0</a></li>
+          <li><a href="revo2.html">Revolusi 2.0</a></li>
+          <li><a href="revo3.html">Revolusi 3.0</a></li>
+          <li><a href="revo4.html">Revolusi 4.0</a></li>
         </ul>
       </nav>
     </header>
@@ -38,19 +38,7 @@
           <h2>Revolusi Industri</h2>
 
           <p>
-            Revolusi Industri adalah perubahan besar, secara cepat, dan juga
-            radikal yang memengaruhi kehidupan corak manusia sering disebut
-            revolusi. Istilah revolusi biasanya digunakan dalam melihat
-            perubahan politik atau sistem pemerintahan. Namun, Revolusi Industri
-            di Inggris pada hakikatnya adalah perubahan dalam cara pembuatan
-            barang-barang yang semula dikerjakan dengan tangan (tenaga manusia)
-            kemudian digantikan dengan tenaga mesin. Dengan demikian,
-            barang-barang dapat dihasilkan dalam jumlah banyak dengan waktu yang
-            relatif singkat. Revolusi Industri menandai terjadinya titik balik
-            besar dalam sejarah dunia, hampir setiap aspek kehidupan sehari-hari
-            dipengaruhi oleh Revolusi Industri, khususnya dalam hal peningkatan
-            pertumbuhan penduduk dan pendapatan rata-rata yang berkelanjutan dan
-            belum pernah terjadi sebelumnya.
+            Revolusi Industri adalah perubahan besar, cepat, dan radikal dalam produksi barang, di mana tenaga manusia digantikan oleh mesin. Dimulai di Inggris, revolusi ini memungkinkan produksi massal dalam waktu singkat. Perubahan ini menjadi titik balik sejarah dunia, memengaruhi hampir semua aspek kehidupan, termasuk pertumbuhan penduduk dan peningkatan pendapatan secara berkelanjutan.
           </p>
           <a href="#card-info" class="btn1">Selengkapnya</a>
         </div>
@@ -65,39 +53,42 @@
                 <img src="./assets/revo1.0.jpg" alt="">
                 <div class="overlay">
                   <h2>Revolusi 1.0</h2>
-                  <p>Revolusi Industri 1.0 merupakan sebuah revolusi di bidang industri yang pertama kali terjadi tepatnya pada abad ke-18 pada periode tahun 1750 hingga tahun 1850. Revolusi ini ditandai dengan adanya penemuan mesin uap yang digunakan dalam proses produksi sebuah barang.</p>
-                  <a href="#revolusi1">Lebih Detail</a>
+                  <p>Revolusi Industri 1.0 (1750–1850) ditandai dengan penemuan mesin uap yang mempercepat produksi barang.</p>
+                  <a href="revo1.html">Lebih Detail</a>
                 </div>
               </div>
               <div class="card">
                 <img src="./assets/revo2.0.jpeg" alt="">
                 <div class="overlay">
                   <h2>Revolusi 2.0</h2>
-                  <p>Kemunculan revolusi industri 2.0 terjadi di awal abad ke-20 yang dikenal dengan revolusi teknologi. Revolusi industri yang terjadi ini ditandai dengan adanya penemuan tenaga listrik yang membuat mesin uap yang tadinya sering digunakan dalam proses produksi semakin lama digantikan dengan adanya tenaga listrik tersebut.</p>
-                  <a href="#revolusi2">Lebih Detail</a>
+                  <p>Revolusi Industri 2.0 (Awal Abad ke-20) ditandai dengan tenaga listrik yang menggantikan mesin uap dan meningkatkan efisiensi produksi.</p>
+                  <a href="revo2.html">Lebih Detail</a>
                 </div>
               </div>
               <div class="card">
                 <img src="./assets/revo3.0.jpg" alt="">
                 <div class="overlay">
                   <h2>Revolusi 3.0</h2>
-                  <p>Kemunculan revolusi industri 3.0 yang terjadi pada akhir abad ke-20 ditandai dengan adanya teknologi digital serta internet. Berdasarkan sosiolog Inggris yaitu David Harvey yang mengemukakan cara pandangnya mengenai revolusi industri yang terjadi di masa ini sebagai sebuah proses pemampatan ruang dan waktu yang semakin terkompresi.</p>
-                  <a href="#revolusi3">Lebih Detail</a>
+                  <p>Revolusi Industri 3.0 (Akhir Abad ke-20) ditandai dengan perkembangan teknologi digital dan internet.</p>
+                  <a href="revo3.html">Lebih Detail</a>
                 </div>
               </div>
               <div class="card">
                 <img src="./assets/revo4.0.jpg" alt="">
                 <div class="overlay">
                   <h2>Revolusi 4.0</h2>
-                  <p>Revolusi industri 4.0 yang terjadi pada awal abad ke-21 merupakan sebuah revolusi dimana manusia telah menemukan pola baru dengan adanya kemajuan teknologi yang terjadi begitu cepat sehingga mengancam berbagai perusahaan yang lebih konvensional.</p>
-                  <a href="#revolusi4">Lebih Detail</a>
+                  <p>Revolusi Industri 4.0 (Awal Abad ke-21) ditandai dengan kemajuan AI, IoT, dan otomatisasi industri.</p>
+                  <a href="revo4.html">Lebih Detail</a>
                 </div>
+              </div>
+            </div>
+            
               </div>
             </div>
           </div>
         </div>
       </section>
-      <article class="main-content">
+      <!-- <article class="main-content">
         <section id="revolusi1" class="content">
           <aside>
             <figure><img src="assets/revo1.0.jpg" alt="" /></figure>
@@ -395,7 +386,7 @@
             <li><a href="https://www.gramedia.com/best-seller/perjalanan-revolusi-industri-1-0-hingga-5-0/?srsltid=AfmBOooKnEiRcNgjU9Y9q2Z55Ss_icM6X6PeVRCKwTQP20Y9pVyfHxIE">https://www.gramedia.com/best-seller/perjalanan-revolusi-industri-1-0-hingga-5-0/?srsltid=AfmBOooKnEiRcNgjU9Y9q2Z55Ss_icM6X6PeVRCKwTQP20Y9pVyfHxIE</a></li>
           </ul>
         </div>
-      </article>
+      </article> -->
     </main>
     <footer class="index-footer">
       <p>&copy; 2025 - Muhamad Farel Hadisaputro</p>
